<resources>
    <string name="app_name">RH Mobile</string>
    <string name="e_mail">E-mail</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="password">Mot de passe</string>
    <string name="phone">Téléphone</string>
    <string name="confirm">Valider</string>
    <string name="reset">Vider les champs</string>
    <string name="sign_in_title">Inscription</string>
    <string name="logo">logo</string>
    <string name="login_title">Connexion</string>
    <string name="create_account">Créer un compte</string>
    <string name="login">Se connecter</string>
    <string name="empty_name">Le nom ne peut pas être vide</string>
    <string name="empty_prename">Le prénom ne peut pas être vide!</string>
    <string name="empty_email">l\'e-mail ne peut pas être vide!</string>
    <string name="empty_password">Le mot de passe ne peut pas être vide!</string>
    <string name="error_adding_user">Erreur! Utilisateur non ajouté!</string>
    <string name="user_added">L\'utilisateur a été ajouté avec succès!</string>
    <string name="login_success">Identification réussie!</string>
    <string name="empty_phone">Le numéro de téléphone ne peut pas être vide!</string>
    <string name="user_not_found">Utilisateur non trouvé!</string>
    <string name="location_premission_denied">Localisation refusée par l\'utilisateur!</string>
    <string name="services_title">Nos Services</string>
    <string name="find_clinic">Trouver une clinique</string>
    <string name="urgent_call">Appel d\'urgence</string>
    <string name="urgent_call_number">tel:190</string>
    <string name="find_doctor">Trouver un médecin</string>
    <string name="find_hospital">Trouver un hôpital</string>
    <string name="find_pharmacy">Trouver une pharmacie</string>
    <string name="find_nurse">Trouver une infirmière</string>
    <string name="find_dispensary">Trouver un dispensaire</string>
    <string name="activate_GPS">Le GPS doit être activé!</string>
    <string name="i_m_here">Je suis là !</string>
    <string name="service_hospital">Hôpital</string>
    <string name="server_hospital_param">hospitals</string>
    <string name="service_clinic">clinique</string>
    <string name="server_clinic_param">clinics</string>
    <string name="service_dispensary">Dispensaire</string>
    <string name="server_dispensary_param">dispensaries</string>
    <string name="service_pharmacy">Pharmacie</string>
    <string name="server_pharmacie_param">pharmacies</string>
    <string name="service_doctor">Médecin</string>
    <string name="server_doctor_param">doctors</string>
    <string name="service_nurse">Infirmière</string>
    <string name="server_nurse_param">nurses</string>
    <string name="service_pharmacy_day">Pharmacie de jour</string>
    <string name="server_pharmacie_day_param">pharmacies_day</string>
    <string name="service_pharmacy_night">Pharmacie de nuit</string>
    <string name="server_pharmacie_night_param">pharmacies_night</string>
    <string name="service_pharmacy_guard">Pharmacie de garde</string>
    <string name="server_pharmacie_guard_param">pharmacies_gard</string>
    <string name="hint_search">Distance en mètre</string>
    <string name="service">"Service: "</string>
    <string name="name">"Nom: "</string>
    <string name="address">"Adresse: "</string>
    <string name="welcome">"Bienvenu "</string>
</resources>